hphp/test/zend/good/Zend/tests/call_static_005.php.expectf

Fatal error: Call to undefined function foo::() in %s/call_static_005.php on line 10
